adjusted transform property on features hero to prevent "jumping"

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -272,12 +272,15 @@
   }
 
   .image-group {
-    grid-row: 1/2;
-    grid-column: 6/13;
     align-self: center;
     position: relative;
     display: grid;
     transform: translateX(4.25vw);
+
+    &_wrapper {
+      grid-column: 6/13;
+      grid-row: 1/2;
+    }
 
     &__image {
       min-height: 0 !important;
@@ -509,9 +512,6 @@
       grid-column: 1/6;
     }
 
-    .image-group {
-      grid-column: 6/13;
-    }
   }
 
   @media (max-width: 875px) {
@@ -591,10 +591,14 @@
     }
 
     .image-group {
-      grid-column: 2/12;
-      grid-row: 2/3;
+
       margin-top: 45px;
       margin-bottom: 50px;
+
+      &_wrapper {
+        grid-column: 2/12;
+        grid-row: 2/3;
+      }
     }
   }
 
